logs/mobility/build.make.138.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:460:1: error: expected declaration before ‘}’ token
 }//end doPickupControllerMovements
 ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
